<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="40dip"
    tools:context="com.checkmyfac.activities.HelpActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/TitreAide"
        android:textColor="#003060"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:clickable="true">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:typeface="serif" android:textStyle="bold" android:textSize="17sp" android:textColor="#003060" android:text="@string/QuestionLocalisation"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="17sp" android:textColor="#003060" android:text="@string/ReponseLocalisation"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:typeface="serif" android:textStyle="bold" android:textSize="17sp" android:textColor="#003060" android:text="@string/QuestionRajouPtsIntUser"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="17sp" android:textColor="#003060" android:text="@string/ReponseRajouPtsIntUser"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:typeface="serif" android:textStyle="bold" android:textSize="17sp" android:textColor="#003060" android:text="@string/QuestionSupTsPtsIntUser"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="17sp" android:textColor="#003060" android:text="@string/ReponseSupTsPtsIntUser"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:typeface="serif" android:textStyle="bold" android:textSize="17sp" android:textColor="#003060" android:text="@string/QuestionSup1PtsIntUser"/>
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="17sp" android:textColor="#003060" android:text="@string/ReponseSup1PtsIntUser"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>