<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ChoiceActivity">

    <TextView
        android:id="@+id/choiceTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_choice"
        android:layout_above="@+id/choiceText"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/choiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choice"
        android:layout_above="@+id/spinnerChoice"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"/>

    <Spinner
        android:id="@+id/spinnerChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/univChoix"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:spinnerMode="dialog" />


    <Button
        android:id="@+id/validChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_map"
        android:onClick="startMapActivity"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

</RelativeLayout>