<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:id="@+id/create_marker_dialog_id">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titre_create_marker_dialog"
        android:hint="@string/Titre"
        android:maxLength="50"
        android:ems="10" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc_create_marker_dialog"
        android:hint="@string/Descr"
        android:maxLength="100"
        android:ems="10" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_create_marker_dialog"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"/>


    <CheckBox
        android:hint="@string/Expire"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:id="@+id/view_calendar_marker_dialog"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <CalendarView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calendar_date_marker_dialog"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>